--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 										</li>
 										
 										<li><a href="privacy.html">Privacy</a></li>
+										<li><a href="tree.html">Christmas Surpise</a></li>
 									</ul>
 								</nav>
 
