--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@ title:'PayPal - The safer, easier way to pay online!',
 							
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">&copy; PAZnet. All rights reserved. 2023</p>
 								</footer>
 
 						</div>
