--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="about.html">About Me</a></li>
 										<li><a href="gallery.html">Gallery</a></li>
+										<li><a href="portfolio.html">Portfolio</a></li>
 										<li>
 											<span class="opener">Products/Services</span>
 											<ul>
