--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>PAZnet - Gallery</title>
+		<title>PAZnet - Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,7 +35,7 @@
 							<!-- Content -->
 								<section>
 									<header class="major">
-										<h1>Gallery&nbsp;</h1>
+										<h1>Portfolio&nbsp;</h1>
 									</header>
 
 								<section>
