--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,7 @@
 										<li><a href="https://www.facebook.com/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="https://www.snapchat.com/" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
 										<li><a href="https://www.instagram.com/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										
+										<li><a href="https://www.youtube.com/@TyPhillip" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
 									</ul>
 								</header>
 
