--- a/portfolio.html
+++ b/portfolio.html
@@ -42,8 +42,8 @@
 									
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic16.png" alt="" /></a>
-											<h3>SV1 Miles Spider Symbol Art</h3>
+											<a href="#" class="image"><img src="images/skillsfirst.jpg" alt="https://skillsfirst.com/people/ty-phillip/galleries/portfolios/26149" /></a>
+											<h3>Click Me</h3>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic17.png" alt="" /></a>
