--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
 									
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/skillsfirst.jpg" alt="https://skillsfirst.com/people/ty-phillip/galleries/portfolios/26149" /></a>
+											<a href="https://skillsfirst.com/people/ty-phillip/galleries/portfolios/26149" class="image"><img src="images/skillsfirst.jpg" alt="" /></a>
 											<h3>Click Me</h3>
 										</article>
 										<article>
