--- a/11x14productpage.html
+++ b/11x14productpage.html
@@ -95,14 +95,15 @@
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="about.html">About Me</a></li>
-										<li><a href="gallery.html">Gallery</a></li>
-										<li>
+										<!--	<li><a href="gallery.html">Gallery</a></li> -->
+										<li><a href="portfolio.html">Portfolio</a></li>
+									<!--	<li>
 											<span class="opener">Products/Services</span>
 											<ul>
 												<li><a href="myproducts.html">Products</a></li>
 												<li><a href="services.html">Services</a></li>
 											</ul>
-										</li>
+										</li> -->
 										
 										<li><a href="privacy.html">Privacy</a></li>
 									</ul>
