--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
 									<div class="posts">
 										<article>
 											<a href="https://skillsfirst.com/awl/portfolios/e98cd7b50ad794738587fb3841ef334845a6bf0ab31d8567" class="image"><img src="images/skillsfirst.jpg" alt="" /></a>
-											<h3>Click Me</h3>
+											<h3><a href="https://skillsfirst.com/awl/portfolios/e98cd7b50ad794738587fb3841ef334845a6bf0ab31d8567">Click Me</a></h3>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic25.jpg" alt="" /></a>
